index uses new format

--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
----
-layout: default
-title: StripOfMist Blog
----
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>StripOfMist Blog</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/atom-one-dark.min.css">
+    <script src="assets/js/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 
-<div class="content-container">
-    <h2>Posts</h2>
-    <ul>
-      {% for post in site.posts %}
-        <li>
-          <h4>{{ post.date | date_to_string }} - <a href="{{ post.url }}">{{ post.title }}</a></h4>
-        </li>
-      {% endfor %}
-    </ul>
-</div>
+  </head>
+  <body>
+    <header>
+    <div class="container">
+        <div class="som"><a href="/">Strip of Mist</a></div>
+        <h2>Trying stuff out</h2>
+    </div>
+    </header>
+
+    <div class="content-container">
+    <h1>Posts</h1>
+<ul>
+<li>2020-09-16 <a href="Test" title="wikilink">Test</a></li>
+<li>2020-06-25 <a href="SQLi" title="wikilink">SQL Injection</a></li>
+<li>2020-06-09 <a href="SSTI" title="wikilink">Server-Side Template Injection</a></li>
+<li>2019-07-16 <a href="CTF_DefconQuals2019_speedrun-001" title="wikilink">CTF Defcon Quals 2019 speedrun-001 Writeup, Environment Setup, pwntools Tutorial</a></li>
+</ul>
+</div></body></html>
