Fixed references to work at index

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TSpin Randomizer</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>TSpin Roulette</title>
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
     <div class="center">
     <p id="centeredText">TSpin Randomizer</p>
-    <img id="centeredImage" src="gifs/tsd.gif" alt="Centered Image">
+    <img id="centeredImage" src="images/tsd.gif" alt="Centered Image">
     <p id="counter">0</p>
     </div>
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
