--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="center">
-    <p id="centeredText">TSpin Randomizer</p>
+    <p id="centeredText">TSpin Roulette</p>
     <img id="centeredImage" src="images/tsd.gif" alt="Centered Image">
     <p id="counter">0</p>
     </div>
