Added checkboxes and made into table

--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
-    <div class="center">
-    <p id="centeredText">TSpin Roulette</p>
-    <img id="centeredImage" src="images/tsd.gif" alt="Centered Image">
-    <p id="counter">0</p>
+<table>
+        <tr>
+        <td>
+            <div id="checkboxContainer">
+            </div>
+        </td>
+        <td>
+            <div class="center">
+            <p id="centeredText">TSpin Roulette</p>
+            <img id="centeredImage" src="images/tsd.gif" alt="Centered Image">
+            <p id="counter">0</p>
+        </td>
+        </tr>
     </div>
     <script src="assets/script.js"></script>
 </body>
