Fixed a missing end table

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <button id="restartButton">Restart<br>( r )</button>
                     </td>
                 </tr>
+            </table>
         </td>
         <td>
         </td>
