--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     </td>
                 </tr>
             </table>
+            <p id="byline">Created by StripOfMist</p>
         </td>
         <td>
         </td>
