Added a nav bar that don't work yet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
+<header>
+<nav>
+<ul>
+    <li><a href="#">TSpin Roulette</a></li>
+    <li><a href="#">About</a></li>
+</ul>
+</nav>
+</header>
+<main>
 <table class="topLevelTable">
         <colgroup class="topLevelColGroup">
         <col>
@@ -43,6 +52,7 @@
         </td>
         </tr>
     </div>
+</main>
     <script src="assets/script.js"></script>
 </body>
 </html>
