Title Bar and About button both do something

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <header>
 <nav>
 <ul>
-    <li><a href="#">TSpin Roulette</a></li>
-    <li><a href="#">About</a></li>
+    <li><a href="#" id=tspinroulette>TSpin Roulette</a></li>
+    <li><a href="#" id="about">About</a></li>
 </ul>
 </nav>
 </header>
@@ -51,7 +51,15 @@
         <td>
         </td>
         </tr>
-    </div>
+        </div>
+            <div id="overlay" class="overlay">
+            <div class="message-box">
+                <span class="close" id="closeButton">&times;</span>
+                <h2>Important Message</h2>
+                <p>This is a big box overlaying 80% of the screen with a message.</p>
+            </div>
+        </div>
+
 </main>
     <script src="assets/script.js"></script>
 </body>
