Added 150L Marathon Leaderboard

--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
                 <td>11</td>
             </tr>
             </table>
+            <h2>Leaderboard - 150L Marathon</h2>
+            <table id="leadMTable">
+            <tr>
+                <td></td>
+                <td>StripOfMist</td>
+                <td>14</td>
+            </tr>
+            </table>
         </div>
         </div>
         </div>
