ISpins now a separate section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <tr>
         <td>
             <div id="checkboxContainer">
+            <h2>Patterns</h2>
+            </div>
+            <div id="iSpinContainer">
+            <h2>I Spins</h2>
             </div>
         </td>
         <td>
