Added sztuck and sz spin section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <div id="iSpinContainer">
             <h2>I Spins</h2>
             </div>
+            <div id="sSpinContainer">
+            <h2>S Spins</h2>
+            </div>
         </td>
         <td>
             <div class="center">
