--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <div id="iSpinContainer">
             <h2>I Spins</h2>
             </div>
-            <div id="sSpinContainer">
-            <h2>S Spins</h2>
+            <div id="szSpinContainer">
+            <h2>S/Z Spins</h2>
             </div>
         </td>
         <td>
