--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <div id="iSpinContainer">
             <h2>I Spins</h2>
             </div>
+            <div id="jlSpinContainer">
+            <h2>J/L Spins</h2>
+            </div>
             <div id="szSpinContainer">
             <h2>S/Z Spins</h2>
             </div>
