Made spins a separate page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <nav>
 <ul>
     <li><a href="#" id=tspinroulette>TSpin Roulette</a></li>
-    <li><a href="#" id="about">About</a></li>
+    <li><a href="#" id=spins>Spins</a></li>
     <li><a href="#" id="leaderboard">Leaderboard</a></li>
+    <li><a href="#" id="about">About</a></li>
 </ul>
 </nav>
 </header>
@@ -25,17 +26,7 @@
         </colgroup>
         <tr>
         <td>
-            <div id="checkboxContainer">
-            <h2>Patterns</h2>
-            </div>
-            <div id="iSpinContainer">
-            <h2>I Spins</h2>
-            </div>
-            <div id="jlSpinContainer">
-            <h2>J/L Spins</h2>
-            </div>
-            <div id="szSpinContainer">
-            <h2>S/Z Spins</h2>
+            <div id="outerPatternDiv">
             </div>
         </td>
         <td>
