--- a/404.html
+++ b/404.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="htmlbody">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>404 - Page Not Found</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loading...</title>
 </head>
 <body>
-  <h1>404 - Page Not Found</h1>
-  <p>The page you are looking for does not exist.</p>
+    <script>
+        var doc = document.getElementById('htmlbody');
+        xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function() {
+            if (this.readyState == 4) {
+                if (this.status == 200) {
+                    doc.innerHTML = this.responseText;
+                    doc.removeAttribute("id");
+                }
+                if (this.status == 404) doc.innerHTML = "Page not found.";
+            }
+        }
+        xhttp.open("GET", "index.html", true);
+        xhttp.send();
+    </script>
 </body>
 </html>
