--- a/hammer.html
+++ b/hammer.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <script>
-    window.location.replace('index.html');
+    window.location.replace('/');
   </script>
 </body>
 </html>
