Added nonfunc. animated and still radio boxes

--- a/index.html
+++ b/index.html
@@ -34,12 +34,29 @@
             <p id="centeredText">TSpin Roulette</p>
             <img id="centeredImage" src="images/tsd.gif" alt="Centered Image">
             <p id="counter">0</p>
+            <table class="radioTable">
+                <tr>
+                    <td class="radio-cell"></td>
+                    <td class="radio-cell"></td>
+                    <td class="radio-cell"></td>
+                    <td class="radio-cell">
+                    <input type="radio" id="animated" name="imgtype" value="animated" checked>
+                    <label for="animated" class="vertical-label">Animated</label>
+                    </td>
+                    <td class="radio-cell">
+                    <input type="radio" id="still" name="imgtype" value="still">
+                    <label for="still" class="vertical-label">Still</label>
+                    </td>
+                    <td class="radio-cell"></td>
+                    <td class="radio-cell"></td>
+                    <td class="radio-cell"></td>
+                </tr>
+            </table>
             <table class="buttonTable">
                 <colgroup class="buttonTableColGroup">
                 <col>
                 <col>
                 </colgroup>
-                <tr>
                     <td class="rbtd">
                     <button id="randomButton">Random Pattern<br>( Space )</button>
                     </td>
